[project]
name = "unidock"
version = "0.1.0"
description = "A python wrapper for the Uni-Dock GPU-accelerated docking application"
authors = [
    { name = "sethhowes", email = "sethshowes@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "duckdb>=0.9.2",
    "hydra-core>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true
